Use known place identifier